Использован подход КПЗ в методах Polygon, объединены методы line.extendInOneWayPlus и Minus в один с явным аргументом